adding robot python

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ SpeechRecognition # Might still be useful for format validation or other audio t
 python-multipart
 
 
-6c8dacb8-bbfc-4d26-b7b0-3f56c81b9cfd.cfargotunnel.com
+# 6c8dacb8-bbfc-4d26-b7b0-3f56c81b9cfd.cfargotunnel.com
 
-b13811bc-0a23-48d0-9233-24e799decc9c.cfargotunnel.com
+# b13811bc-0a23-48d0-9233-24e799decc9c.cfargotunnel.com
+
+# 693638ef-4bb4-444f-b176-d768633a66d8.cfargotunnel.com
